fix(frontend): padding shift on focus

--- a/packages/frontend/components/textarea/styles.css
+++ b/packages/frontend/components/textarea/styles.css
@@ -13,6 +13,9 @@
     border-color: var(--color-on-background);
     border-width: var(--input-border-width-focus);
     inset-block-start: calc(var(--input-border-width-focus-offset) * -1);
+    padding-inline-start: calc(
+      var(--space-s) - var(--input-border-width-focus-offset)
+    );
   }
 
   &[readonly] {
